<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_menu_page_id"
    android:fitsSystemWindows="true">

    <Button
        android:id="@+id/nav_home"
        android:layout_width="130dp"
        android:layout_height="67dp"
...
